# MyNeuralNetworknew

./: .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  compare_files.py  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh
expected-results/: out-prediction-log-single-image.txt  out-tensor-single-image.txt  out-tensor-single-label.txt
mnist-configs/: input-ci.config  input.config
pytorch/: main.py
src/: layer.hpp  loss.hpp  matvec.hpp  neural_network.cpp  neural_network.hpp  optimizer.hpp  read_dataset_images.cpp  read_dataset_images.hpp  read_dataset_labels.cpp  read_dataset_labels.hpp  tensor.hpp
text-file/: read_labels.cpp
